add textview in center for facts and button to show facts

--- a/FunFactivity/Resources/layout/Main.axml
+++ b/FunFactivity/Resources/layout/Main.axml
@@ -1,4 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
-	<Button android:id="@+id/myButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hello" />
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ff2aaa3e">
+    <TextView
+        android:text="Press the button to show a fun fact"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="200dp"
+        android:id="@+id/factTextView" />
+    <Button
+        android:text="Show Another Fun Fact"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/factTextView"
+        android:layout_marginTop="500px"
+        android:id="@+id/showFactButton" />
 </LinearLayout>
